# shadotui-template

./: Cargo.toml  README.md
src/: main.rs
src/tui/: action.rs  app.rs  event.rs  message.rs  mod.rs  terminal.rs  utils.rs
src/tui/components/: base.rs  mod.rs  other.rs
