[package]
name = "shado-tui-template"
version = "0.1.0"
edition = "2021"
authors = ["Shadorain"]

[dependencies]
anyhow = "1.0.71"
better-panic = "0.3.0"
clap = { version = "4.3.4", default-features = false, features = [
  "std",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
clap_complete = "4.3.1"

ratatui = {version = "0.22.0"}
tui-input = "0.8.0"
crossterm = { version = "0.27.0", default-features = false, features = [
  "event-stream",
] }

tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
futures = "0.3.28"
signal-hook = "0.3.15"

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
name = "shado-tui-template"
path = "src/main.rs"
